# PyXBRLTools

./: .gitignore  README.md  pyproject.toml  qualitative.html  requirements.txt
.github/workflows/: python-package.yml
.obsidian/: app.json  workspace-mobile.json
.trash/: conflict-files-obsidian-git.md
PyXBRLTools/: code_samples.py  exceptions.py  label_manager copy.py  label_manager.py  py_xbrl_tools_loging.py  sample.py  sample_test.py  test_label_manager.py  utils.py  xbrl_reader.py
PyXBRLTools/db_connector/: postgre_sql_connector.py
PyXBRLTools/log/: README.md  py_xbrl_tools_loging.py
PyXBRLTools/tests/: conftest.py
PyXBRLTools/utils/: utils.py
PyXBRLTools/xbrl/: labels.py  xsds.py
PyXBRLTools/xbrl_exception/: __init__.py  xbrl_manager_exception.py  xbrl_model_exception.py  xbrl_parser_exception.py
PyXBRLTools/xbrl_loder/: ix_non_fraction.py
PyXBRLTools/xbrl_manager/: README.md  base_xbrl_manager.py  ixbrl_manager.py  label_manager.py  link_manager.py  link_managers.py  qualitative_manager.py  test_label_manager.py  xbrl_download_manager.py  xbrl_label_manager.py  xbrl_link_manager.py  xbrl_path_manager.py  xbrl_reader.py
PyXBRLTools/xbrl_model/: README.md  base_xbrl_model.py  edif_model.py  edit_model.py  edjp_model.py  edus_model.py  efjp_model.py  ixbrl_models.py  rejp_model.py  rrdf_model.py  rrfc_model.py  rvdf_model.py  rvfc_model.py  xbrl_model.py
PyXBRLTools/xbrl_parser copy/: xml_label_parser.py  xml_link_parser.py
app/connect/: __init__.py  (+1 more)
const/: __init__.py
doc/: .gitignore
tests/: test_label_manager.py  test_utils.py
(+189 files in other folders)
